# arch_mirror

./: .gitignore  000-default.conf  Arch.sh  Dockerfile  README.md  Rank.sh  Setup.sh  Todo.txt  arch_mirror.py  build.yml  example.yml  flake.nix  pyproject.toml  syncrepo-template.sh
arch_mirror/: __init__.py  sync.py
hydra/: jobs.nix  jobsets.nix  spec.json
tests/: test_code_compliance.py
